# ssh-picker

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-test.yml  format-check.yml  static-analysis.yml
ssh-picker/include/: host.hpp  tui.hpp
ssh-picker/src/: host.cpp  main.cpp  tui.cpp
tests/: CMakeLists.txt
